styles.css
* {
    /* outline: 1px dashed red; */
}

:root {
    /* background colours */
    --bg1: #0a0a23;
    --bg2: #1b1b32;
    --bg3: #2a2a40;
    --bg4: #3b3b4f;
    /* text and main highlight colour */
    --txt1: #ffffff;
    --txt2: #f5f6f7;
    --txt3: #dfdfe2;
    --txt4: #d0d0d5;
    /* accent colour */
    --purple: #dbb8ff;
    --darkpurple: #5a01a7;
    --yellow: #f1be32;
    --darkyellow: #4d3800;
    --blue: #99c9ff;
    --darkblue: #002ead;
    --green: #acd157;
    --darkgreen: #00471b;
}

html {
    font-size: 10px;
    /* margin: 0; */
    /* padding: 0; */
    box-sizing: border-box;
    scroll-behavior: smooth;
}

body {
    box-sizing: border-box;
    margin: 0;
    /* padding: 0; */
    color: var(--txt1);
    font-size: 1.8rem;
    background-color: var(--bg2);
}

.banner {
    box-sizing: inherit;
    outline: 1px dashed green;
    position: relative;
    width: 100%;
    min-height: 100vh;
    min-height: 100dvh;
    padding: 100px;
    /* background: url(assets/bg.jpg); */
    background-color: var(--bg1);
    background-size: cover;
    display: flex;
    align-items: center;
    transition: 0.5s;
    z-index: 3;
}

header {
    box-sizing: inherit;
    outline: 1px dashed red;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    display: flex;
    justify-content: space-between;
    padding: 40px 100px;
    z-index: 4;
}

header .logo {
    /* margin: inherit; */
    position: relative;
    font-weight: 700;
    text-decoration: none;
    font-size: 3rem;
    text-transform: uppercase;
    letter-spacing: 2px;
    transition: 3s;
}

header #navbutton {
    position: relative;
    width: 30px;
    height: 30px;
    cursor: pointer;
    z-index: 5;
}

header #navbutton::before {
    content: "";
    position: absolute;
    top: 7px;
    width: 100%;
    height: 2px;
    background: #fff;
}

header #navbutton::after {
    content: "";
    position: absolute;
    bottom: 7px;
    width: 100%;
    height: 2px;
    background: #fff;
}

#navbar {
    position: fixed;
    top: 0;
    right: -200px;
    width: 400px;
    height: 100vh;
    height: 100dvh;
    background-color: var(--bg4);
    color: var(--txt4);
    display: grid;
    place-items: center;
    transition: 0.5s;
    z-index: 1;
}

#navbar ul {
    position: relative;
    padding-left: 0;
    gap: 1rem;
    display: flex;
    flex-direction: column;
}

#navbar ul li {
    list-style: none;
}


#navbar ul li a {
    color: var(--txt4);
    text-decoration: none;
    display: inline-block;
    font-size: 3rem;
    /* font-weight: 600; */
    text-transform: uppercase;
}

/* sidebar is active */

.banner.active header #navbutton::before {
    transform: translate(-50%,-50%) rotate(45deg);
    top: 50%;
    left: 50%;
}

.banner.active header #navbutton::after {
    /* transform: translateX(400px); */
    transform: translate(-50%,-50%) rotate(-45deg);
    top: 50%;
    left: 50%;
}

.banner.active {
    transform: translate(-400px);
    transition: 0.25s;
}

#navbar.active {
    right: 0;
    transition: 0.25s;
}

/* END sidebar active  -   -   - */

main {}

article {
    outline: 1px dashed yellow;
    /* height: 100vh; */
    z-index: 2;
}

